about page content

--- a/src/data/project/ProjectData.json
+++ b/src/data/project/ProjectData.json
@@ -19,7 +19,8 @@
         "description": "Next generation of web and mobile experiences, to anyone putting a website together for the first time. We provide elegant solutions that set new standards for online publishing."
       }
     ],
-    "video": "https://www.youtube.com/watch?v=4FjFRQguGsg&ab_channel=MetrolifeTV"
+    "video": "https://www.youtube.com/watch?v=4FjFRQguGsg&ab_channel=MetrolifeTV",
+    "cta": "https://www.google.com/"
   },
   {
     "id": 2,
