--- a/src/data/project/ProjectData.json
+++ b/src/data/project/ProjectData.json
@@ -2,7 +2,9 @@
   {
     "id": 1,
     "image": "/images/project/griffin-art.jpg",
+    "videoThumbImage": "/images/project/griffin-art.jpg",
     "title": "Griffin Art",
+    "DescTitle": "Griffin Art Desc",
     "category": ["Branding", "Website", "App"],
     "excerpt": "A quick view of industry specific problems solved with design by the awesome team at Keystroke.",
     "body": [
