--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-on-screen": "^2.1.1",
     "react-paginate": "^8.1.3",
     "react-router-dom": "^6.2.1",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "^2.1.3",
     "react-slick": "^0.29.0",
     "react-tilty": "^2.0.3",
