--- a/src/data/project/ProjectData.json
+++ b/src/data/project/ProjectData.json
@@ -22,7 +22,7 @@
       }
     ],
     "video": "https://www.youtube.com/watch?v=4FjFRQguGsg&ab_channel=MetrolifeTV",
-    "cta": "https://www.google.com/"
+    "cta": "https://narayaninamastute.com/"
   },
   {
     "id": 2,
@@ -47,7 +47,7 @@
       }
     ],
     "video": "https://www.youtube.com/watch?v=4FjFRQguGsg&ab_channel=MetrolifeTV",
-    "cta": "https://www.google.com/"
+    "cta": "https://perkymoth.com/"
   },
   {
     "id": 3,
@@ -71,8 +71,7 @@
         "description": "Next generation of web and mobile experiences, to anyone putting a website together for the first time. We provide elegant solutions that set new standards for online publishing."
       }
     ],
-    "video": "https://www.youtube.com/watch?v=4FjFRQguGsg&ab_channel=MetrolifeTV",
-    "cta": "https://www.google.com/"
+    "video": "https://www.youtube.com/watch?v=4FjFRQguGsg&ab_channel=MetrolifeTV"
   },
   {
     "id": 4,
@@ -96,8 +95,7 @@
         "description": "Next generation of web and mobile experiences, to anyone putting a website together for the first time. We provide elegant solutions that set new standards for online publishing."
       }
     ],
-    "video": "https://www.youtube.com/watch?v=4FjFRQguGsg&ab_channel=MetrolifeTV",
-    "cta": "https://www.google.com/"
+    "video": "https://www.youtube.com/watch?v=4FjFRQguGsg&ab_channel=MetrolifeTV"
   },
   {
     "id": 5,
@@ -121,8 +119,7 @@
         "description": "Next generation of web and mobile experiences, to anyone putting a website together for the first time. We provide elegant solutions that set new standards for online publishing."
       }
     ],
-    "video": "https://www.youtube.com/watch?v=4FjFRQguGsg&ab_channel=MetrolifeTV",
-    "cta": "https://www.google.com/"
+    "video": "https://www.youtube.com/watch?v=4FjFRQguGsg&ab_channel=MetrolifeTV"
   },
   {
     "id": 6,
@@ -147,7 +144,7 @@
       }
     ],
     "video": "https://www.youtube.com/watch?v=4FjFRQguGsg&ab_channel=MetrolifeTV",
-    "cta": "https://www.google.com/"
+    "cta": "https://griffin-art.net/"
   },
   {
     "id": 7,
@@ -172,7 +169,7 @@
       }
     ],
     "video": "https://www.youtube.com/watch?v=4FjFRQguGsg&ab_channel=MetrolifeTV",
-    "cta": "https://www.google.com/"
+    "cta": "https://farooqperfume.com/"
   },
   {
     "id": 8,
@@ -197,7 +194,7 @@
       }
     ],
     "video": "https://www.youtube.com/watch?v=4FjFRQguGsg&ab_channel=MetrolifeTV",
-    "cta": "https://www.google.com/"
+    "cta": "https://linearityarchitects.com//"
   },
   {
     "id": 9,
@@ -222,7 +219,7 @@
       }
     ],
     "video": "https://www.youtube.com/watch?v=4FjFRQguGsg&ab_channel=MetrolifeTV",
-    "cta": "https://www.google.com/"
+    "cta": "https://sonicoverseas.com/"
   },
   {
     "id": 10,
@@ -247,7 +244,7 @@
       }
     ],
     "video": "https://www.youtube.com/watch?v=4FjFRQguGsg&ab_channel=MetrolifeTV",
-    "cta": "https://www.google.com/"
+    "cta": "https://multibrand.com.bd/"
   },
   {
     "id": 11,
@@ -272,7 +269,7 @@
       }
     ],
     "video": "https://www.youtube.com/watch?v=4FjFRQguGsg&ab_channel=MetrolifeTV",
-    "cta": "https://www.google.com/"
+    "cta": "https://notunera.com/"
   },
   {
     "id": 12,
@@ -297,7 +294,7 @@
       }
     ],
     "video": "https://www.youtube.com/watch?v=4FjFRQguGsg&ab_channel=MetrolifeTV",
-    "cta": "https://www.google.com/"
+    "cta": "https://play.google.com/store/apps/details?id=fsktm.um.edu.prolungs"
   },
   {
     "id": 13,
@@ -322,7 +319,7 @@
       }
     ],
     "video": "https://www.youtube.com/watch?v=4FjFRQguGsg&ab_channel=MetrolifeTV",
-    "cta": "https://www.google.com/"
+    "cta": "https://play.google.com/store/apps/details?id=fsktm.um.edu.ridealong"
   },
   {
     "id": 14,
@@ -347,7 +344,7 @@
       }
     ],
     "video": "https://www.youtube.com/watch?v=4FjFRQguGsg&ab_channel=MetrolifeTV",
-    "cta": "https://www.google.com/"
+    "cta": "https://invicta.com.bd/"
   },
   {
     "id": 15,
@@ -372,7 +369,7 @@
       }
     ],
     "video": "https://www.youtube.com/watch?v=4FjFRQguGsg&ab_channel=MetrolifeTV",
-    "cta": "https://www.google.com/"
+    "cta": "https://rainforestbd.com/"
   },
   {
     "id": 16,
@@ -397,7 +394,7 @@
       }
     ],
     "video": "https://www.youtube.com/watch?v=4FjFRQguGsg&ab_channel=MetrolifeTV",
-    "cta": "https://www.google.com/"
+    "cta": "https://inthiramunion.com/"
   },
   {
     "id": 17,
@@ -422,7 +419,7 @@
       }
     ],
     "video": "https://www.youtube.com/watch?v=4FjFRQguGsg&ab_channel=MetrolifeTV",
-    "cta": "https://www.google.com/"
+    "cta": "https://hmsabirnoor.me/"
   },
   {
     "id": 18,
@@ -447,7 +444,7 @@
       }
     ],
     "video": "https://www.youtube.com/watch?v=4FjFRQguGsg&ab_channel=MetrolifeTV",
-    "cta": "https://www.google.com/"
+    "cta": "https://activarmor.ae/"
   },
   {
     "id": 19,
@@ -472,6 +469,6 @@
       }
     ],
     "video": "https://www.youtube.com/watch?v=4FjFRQguGsg&ab_channel=MetrolifeTV",
-    "cta": "https://www.google.com/"
+    "cta": "https://dorjaropashe.com/"
   }
 ]
